cloudformation/routing.yaml
AWSTemplateFormatVersion: '2010-09-09'
Metadata:
  License: Apache-2.0
Description: This template sets up routing for VPC
Mappings:
  RegionMapPrefixList:
    us-west-1:
      S3: pl-6ba54002
      DynamoDB: pl-6ea54007
    us-west-2:
      S3: pl-68a54001
      DynamoDb: pl-00a54069
Resources:
  VpcIGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Project
          Value: Alpha
        - Key: Owner
          Value: foo@bar.com
  VpcIGWAssociation:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref VpcIGW
      VpcId: !ImportValue PrimaryVpcId
  NatEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
    DependsOn: VpcIGW
  NatGW:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatEIP.AllocationId
      SubnetId: !ImportValue PublicSubnetId
      Tags:
        - Key: Project
          Value: Alpha
        - Key: Owner
          Value: foo@bar.com
  IGWRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref VpcIGW
      RouteTableId: !ImportValue PublicSubnetRouteTableId
    DependsOn:
      - VpcIGW
      - VpcIGWAssociation
  NatGWRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGW
      RouteTableId: !ImportValue PrivateSubnetRouteTableId
  S3Endpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      RouteTableIds:
        - !ImportValue PublicSubnetRouteTableId
        - !ImportValue PrivateSubnetRouteTableId
      ServiceName: !Join
        - ''
        - - com.amazonaws.
          - !Ref 'AWS::Region'
          - .s3
      VpcId: !ImportValue PrimaryVpcId
Outputs:
  VpcIGWId:
    Description: IGW Id
    Value: !Ref VpcIGW
    Export:
      Name: VpcIGWId
  NatGWId:
    Description: NatGateway Id
    Value: !Ref NatGW
    Export:
      Name: NatGWId
  S3PrefixList:
    Description: S3 Prefix list
    Value: !FindInMap [RegionMapPrefixList, !Ref 'AWS::Region', S3]
    Export:
      Name: S3PrefixList
  DynamoDbPrefixList:
    Description: DynamoDb Prefix list
    Value: !FindInMap [RegionMapPrefixList, !Ref 'AWS::Region', DynamoDb]
    Export:
      Name: DynamoDbPrefixList
